@@ -2,8 +2,8 @@ Package: GPArotation
 Title: GPA Factor Rotation
 Description:  Gradient Projection Algorithm Rotation for Factor Analysis. See ?GPArotation.Intro for more details.
 Depends: R (>= 2.0.0)
-Version: 2007.04-1
-Date: 2007-04-23
+Version: 2007.06-1
+Date: 2007-06-07
 LazyLoad: yes
 License: GPL Version 2. See the LICENSE file for details.
 Author: Coen Bernaards and Robert Jennrich
